qt/gen_qabstractanimation.h

class QAbstractAnimation;
class QAnimationGroup;
class QEvent;
class QMetaObject;
class QObject;
typedef struct QAbstractAnimation QAbstractAnimation;
typedef struct QAnimationDriver QAnimationDriver;
typedef struct QAnimationGroup QAnimationGroup;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
bool QAnimationDriver_override_virtual_childEvent(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_childEvent(void* self, QChildEvent* event);
bool QAnimationDriver_override_virtual_customEvent(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_customEvent(void* self, QEvent* event);
bool QAnimationDriver_override_virtual_connectNotify(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QAnimationDriver_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QAnimationDriver_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QAnimationDriver_delete(QAnimationDriver* self);