qt/gen_qabstractanimation.nim

proc fQAnimationDriver_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QAnimationDriver_virtualbase_childEvent".}
proc fcQAnimationDriver_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_childEvent".}
proc fQAnimationDriver_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QAnimationDriver_virtualbase_customEvent".}
proc fcQAnimationDriver_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_customEvent".}
proc fQAnimationDriver_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QAnimationDriver_virtualbase_connectNotify".}
proc fcQAnimationDriver_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_connectNotify".}
proc fQAnimationDriver_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QAnimationDriver_virtualbase_disconnectNotify".}
proc fcQAnimationDriver_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QAnimationDriver_override_virtual_disconnectNotify".}
proc fcQAnimationDriver_delete(self: pointer) {.importc: "QAnimationDriver_delete".}


func init*(T: type QAbstractAnimation, h: ptr cQAbstractAnimation): QAbstractAnimation =
  T(h: h)
proc create*(T: type QAbstractAnimation, ): QAbstractAnimation =

  QAbstractAnimation.init(fcQAbstractAnimation_new())
proc create*(T: type QAbstractAnimation, parent: gen_qobject.QObject): QAbstractAnimation =

  QAbstractAnimation.init(fcQAbstractAnimation_new2(parent.h))
proc metaObject*(self: QAbstractAnimation, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQAbstractAnimation_metaObject(self.h))

proc metacast*(self: QAbstractAnimation, param1: cstring): pointer =

  fcQAbstractAnimation_metacast(self.h, param1)

proc metacall*(self: QAbstractAnimation, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQAbstractAnimation_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QAbstractAnimation, s: cstring): string =

  let v_ms = fcQAbstractAnimation_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type QAbstractAnimation, s: cstring): string =

  let v_ms = fcQAbstractAnimation_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc state*(self: QAbstractAnimation, ): QAbstractAnimationState =

  QAbstractAnimationState(fcQAbstractAnimation_state(self.h))

proc group*(self: QAbstractAnimation, ): gen_qanimationgroup.QAnimationGroup =

  gen_qanimationgroup.QAnimationGroup(h: fcQAbstractAnimation_group(self.h))

proc direction*(self: QAbstractAnimation, ): QAbstractAnimationDirection =

  QAbstractAnimationDirection(fcQAbstractAnimation_direction(self.h))

proc setDirection*(self: QAbstractAnimation, direction: QAbstractAnimationDirection): void =

  fcQAbstractAnimation_setDirection(self.h, cint(direction))

proc currentTime*(self: QAbstractAnimation, ): cint =

  fcQAbstractAnimation_currentTime(self.h)

proc currentLoopTime*(self: QAbstractAnimation, ): cint =

  fcQAbstractAnimation_currentLoopTime(self.h)

proc loopCount*(self: QAbstractAnimation, ): cint =

  fcQAbstractAnimation_loopCount(self.h)

proc setLoopCount*(self: QAbstractAnimation, loopCount: cint): void =

  fcQAbstractAnimation_setLoopCount(self.h, loopCount)

proc currentLoop*(self: QAbstractAnimation, ): cint =

  fcQAbstractAnimation_currentLoop(self.h)

proc duration*(self: QAbstractAnimation, ): cint =

  fcQAbstractAnimation_duration(self.h)

proc totalDuration*(self: QAbstractAnimation, ): cint =

  fcQAbstractAnimation_totalDuration(self.h)

proc finished*(self: QAbstractAnimation, ): void =

  fcQAbstractAnimation_finished(self.h)

proc miqt_exec_callback_QAbstractAnimation_finished(slot: int) {.exportc.} =
  type Cb = proc()
  let nimfunc = cast[ptr Cb](cast[pointer](slot))

  nimfunc[]()

proc onfinished*(self: QAbstractAnimation, slot: proc()) =
  type Cb = proc()
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAbstractAnimation_connect_finished(self.h, cast[int](addr tmp[]))
proc stateChanged*(self: QAbstractAnimation, newState: QAbstractAnimationState, oldState: QAbstractAnimationState): void =

  fcQAbstractAnimation_stateChanged(self.h, cint(newState), cint(oldState))

proc miqt_exec_callback_QAbstractAnimation_stateChanged(slot: int, newState: cint, oldState: cint) {.exportc.} =
  type Cb = proc(newState: QAbstractAnimationState, oldState: QAbstractAnimationState)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = QAbstractAnimationState(newState)

  let slotval2 = QAbstractAnimationState(oldState)


  nimfunc[](slotval1, slotval2)

proc onstateChanged*(self: QAbstractAnimation, slot: proc(newState: QAbstractAnimationState, oldState: QAbstractAnimationState)) =
  type Cb = proc(newState: QAbstractAnimationState, oldState: QAbstractAnimationState)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAbstractAnimation_connect_stateChanged(self.h, cast[int](addr tmp[]))
proc currentLoopChanged*(self: QAbstractAnimation, currentLoop: cint): void =

  fcQAbstractAnimation_currentLoopChanged(self.h, currentLoop)

proc miqt_exec_callback_QAbstractAnimation_currentLoopChanged(slot: int, currentLoop: cint) {.exportc.} =
  type Cb = proc(currentLoop: cint)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = currentLoop


  nimfunc[](slotval1)

proc oncurrentLoopChanged*(self: QAbstractAnimation, slot: proc(currentLoop: cint)) =
  type Cb = proc(currentLoop: cint)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAbstractAnimation_connect_currentLoopChanged(self.h, cast[int](addr tmp[]))
proc directionChanged*(self: QAbstractAnimation, param1: QAbstractAnimationDirection): void =

  fcQAbstractAnimation_directionChanged(self.h, cint(param1))

proc miqt_exec_callback_QAbstractAnimation_directionChanged(slot: int, param1: cint) {.exportc.} =
  type Cb = proc(param1: QAbstractAnimationDirection)
  let nimfunc = cast[ptr Cb](cast[pointer](slot))
  let slotval1 = QAbstractAnimationDirection(param1)


  nimfunc[](slotval1)

proc ondirectionChanged*(self: QAbstractAnimation, slot: proc(param1: QAbstractAnimationDirection)) =
  type Cb = proc(param1: QAbstractAnimationDirection)
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fQAbstractAnimation_connect_directionChanged(self.h, cast[int](addr tmp[]))
proc start*(self: QAbstractAnimation, ): void =

  fcQAbstractAnimation_start(self.h)

proc pause*(self: QAbstractAnimation, ): void =

  fcQAbstractAnimation_pause(self.h)

proc resume*(self: QAbstractAnimation, ): void =

  fcQAbstractAnimation_resume(self.h)

proc setPaused*(self: QAbstractAnimation, paused: bool): void =

  fcQAbstractAnimation_setPaused(self.h, paused)

proc stop*(self: QAbstractAnimation, ): void =

  fcQAbstractAnimation_stop(self.h)

proc setCurrentTime*(self: QAbstractAnimation, msecs: cint): void =

  fcQAbstractAnimation_setCurrentTime(self.h, msecs)

proc tr2*(_: type QAbstractAnimation, s: cstring, c: cstring): string =

  let v_ms = fcQAbstractAnimation_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr3*(_: type QAbstractAnimation, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQAbstractAnimation_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf82*(_: type QAbstractAnimation, s: cstring, c: cstring): string =

  let v_ms = fcQAbstractAnimation_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf83*(_: type QAbstractAnimation, s: cstring, c: cstring, n: cint): string =

  let v_ms = fcQAbstractAnimation_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc start1*(self: QAbstractAnimation, policy: QAbstractAnimationDeletionPolicy): void =

  fcQAbstractAnimation_start1(self.h, cint(policy))

proc callVirtualBase_metacall(self: QAbstractAnimation, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =


  fQAbstractAnimation_virtualbase_metacall(self.h, cint(param1), param2, param3)

type QAbstractAnimationmetacallBase* = proc(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
proc onmetacall*(self: QAbstractAnimation, slot: proc(super: QAbstractAnimationmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint) =
  # TODO check subclass
  type Cb = proc(super: QAbstractAnimationmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_override_virtual_metacall(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QAbstractAnimation_metacall(self: ptr cQAbstractAnimation, slot: int, param1: cint, param2: cint, param3: pointer): cint {.exportc: "miqt_exec_callback_QAbstractAnimation_metacall ".} =
  type Cb = proc(super: QAbstractAnimationmetacallBase, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): auto =
    callVirtualBase_metacall(QAbstractAnimation(h: self), param1, param2, param3)
  let slotval1 = gen_qobjectdefs.QMetaObjectCall(param1)

  let slotval2 = param2

  let slotval3 = param3


  let virtualReturn = nimfunc[](superCall, slotval1, slotval2, slotval3 )

  virtualReturn
type QAbstractAnimationdurationBase* = proc(): cint
proc onduration*(self: QAbstractAnimation, slot: proc(): cint) =
  # TODO check subclass
  type Cb = proc(): cint
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_override_virtual_duration(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QAbstractAnimation_duration(self: ptr cQAbstractAnimation, slot: int): cint {.exportc: "miqt_exec_callback_QAbstractAnimation_duration ".} =
  type Cb = proc(): cint
  var nimfunc = cast[ptr Cb](cast[pointer](slot))

  let virtualReturn = nimfunc[]( )

  virtualReturn
proc callVirtualBase_event(self: QAbstractAnimation, event: gen_qcoreevent.QEvent): bool =


  fQAbstractAnimation_virtualbase_event(self.h, event.h)

type QAbstractAnimationeventBase* = proc(event: gen_qcoreevent.QEvent): bool
proc onevent*(self: QAbstractAnimation, slot: proc(super: QAbstractAnimationeventBase, event: gen_qcoreevent.QEvent): bool) =
  # TODO check subclass
  type Cb = proc(super: QAbstractAnimationeventBase, event: gen_qcoreevent.QEvent): bool
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_override_virtual_event(self.h, cast[int](addr tmp[]))

proc miqt_exec_callback_QAbstractAnimation_event(self: ptr cQAbstractAnimation, slot: int, event: pointer): bool {.exportc: "miqt_exec_callback_QAbstractAnimation_event ".} =
  type Cb = proc(super: QAbstractAnimationeventBase, event: gen_qcoreevent.QEvent): bool
  var nimfunc = cast[ptr Cb](cast[pointer](slot))
  proc superCall(event: gen_qcoreevent.QEvent): auto =
    callVirtualBase_event(QAbstractAnimation(h: self), event)
  let slotval1 = gen_qcoreevent.QEvent(h: event)


  let virtualReturn = nimfunc[](superCall, slotval1 )

  virtualReturn
type QAbstractAnimationupdateCurrentTimeBase* = proc(currentTime: cint): void
proc onupdateCurrentTime*(self: QAbstractAnimation, slot: proc(currentTime: cint): void) =
  # TODO check subclass
  type Cb = proc(currentTime: cint): void
  var tmp = new Cb
  tmp[] = slot
  GC_ref(tmp)
  fcQAbstractAnimation_override_virtual_updateCurrentTime(self.h, cast[int](addr tmp[]))
